Use cool font and  moody background

--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,15 @@
+@font-face {
+    font-family: "Hina Mancho";
+    src: url(../font/HinaMincho-Regular.ttf);
+}
+
+* {
+    font-family: "Hina Mancho";
+}
+
 body {
+    background-color: black;
+    color: white;
     width: 1000px;
 }
 
