--- a/css/index.css
+++ b/css/index.css
@@ -32,10 +32,14 @@ a:visited {
 
 /* page design */
 
+header .logo-wrapper {
+    display: flex;
+}
+
 header .logo {
-    height: 33px;
-    margin: 0 5px;
-    width: 33px;
+    height: 80px;
+    margin-right: 20px;
+    width: 80px;
 }
 
 header h1 {
