Add image zoom functionality

--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,11 @@ a:visited {
     color: white;
 }
 
+hr {
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
 /* common style */
 
 .hr-flexbox {
