--- a/css/index.css
+++ b/css/index.css
@@ -52,8 +52,7 @@ header h1 {
 }
 
 body {
-    background: rgb(0,144,203);
-    background: linear-gradient(30deg, rgba(0,144,203,1) 0%, rgba(21,16,46,1) 60%, rgba(0,0,0,1) 100%);
+    background: linear-gradient(30deg, rgb(0,144,203) 0%, rgb(21,16,46) 60%, rgb(0,0,0) 100%);
     color: white;
     width: 1000px;
 }
