--- a/css/index.css
+++ b/css/index.css
@@ -52,7 +52,7 @@ header h1 {
 }
 
 body {
-    background: linear-gradient(30deg, rgb(0,144,203) 0%, rgb(21,16,46) 60%, rgb(0,0,0) 100%);
+    background: linear-gradient(30deg, rgb(0, 144, 203) 0%, rgb(21, 16, 46) 60%, rgb(0, 0, 0) 100%);
     color: white;
     width: 1000px;
 }
