Add guest introduction

--- a/css/index.css
+++ b/css/index.css
@@ -28,6 +28,10 @@ hr {
     justify-content: space-around;
 }
 
+.hr-flexbox a{
+    text-align: center;
+}
+
 .hr-flexbox .small {
     border: solid 1px black;
     display: flex;
