--- a/src/sample2/css/index.css
+++ b/src/sample2/css/index.css
@@ -16,6 +16,14 @@ body {
     top: 0;
 }
 
+.top-center-head-out {
+    left: 0;
+    margin: auto;
+    position: absolute;
+    right: 0;
+    top: -10%;
+}
+
 .bold-border {
     border: 5px solid black;
 }
@@ -26,6 +34,43 @@ body {
     height: 100%;
     position: fixed;
     width: 100%;
+}
+
+.television {
+    background-color: black;
+    border-radius: 5%;
+    height: 380px;
+    padding: 10px;
+    width: 530px;
+}
+
+.television img {
+    border-radius: 4%;
+}
+
+.antenna {
+    background-color: black;
+    border-radius: 50% / 100% 100% 0 0;
+    height: 10%;
+    width: 20%;
+}
+
+.antenna::before {
+    background-color: black;
+    content: "";
+    display: block;
+    height: 57%;
+    transform: rotate(135deg);
+    width: 120%;
+}
+
+.antenna::after {
+    background-color: black;
+    content: "";
+    display: block;
+    height: 57%;
+    transform: rotate(225deg) translate(25%, -10%);
+    width: 120%;
 }
 
 .background1, .background2, .background3 {
