--- a/src/sample3/css/index.css
+++ b/src/sample3/css/index.css
@@ -1,3 +1,4 @@
+/* default style */
 
 @font-face {
     font-family: "Soseki";
@@ -8,10 +9,15 @@
     font-family: "Soseki";
 }
 
+p {
+    font-weight: bold;
+    line-height: 2rem;
+}
+
 /* page design */
 
 header .logo-wrapper {
-    background-image: linear-gradient(80deg, #daffdf, #a5d1a6)
+    background-image: linear-gradient(80deg, #daffdf, #a5d1a6);
 }
 
 .blink-omotenashi {
